# bevy_regolith

./: Cargo.toml  README.md
docs/: ARCHITECTURE_DIAGRAM.md  BEVY_REGOLITH_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PBD_explainer.md  PERFORMANCE_PROFILING.md  rapier-interaction-method.md
examples/: basic.rs  basin.rs  performance_benchmark.rs  rapier_integration.rs  rigid_body_test.rs  sandbox.rs
src/: camera.rs  collision.rs  debug.rs  lib.rs  material.rs  particle.rs  rapier_integration.rs  rendering.rs  rigid_body.rs  solver.rs  spatial.rs  spawner.rs  ui.rs
